# opengl_super_bible

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
ch02/: app.h  frag.frag  main.cpp  vert.vert
ch03/: CMakeLists.txt  app.h  frag.frag  geometry.gs  main.cpp  tesselation.tesc  tesselation.tese  vert.vert
ch05/: CMakeLists.txt  frag.frag  frag_522.frag  main_5_1.cpp  main_5_22.cpp  ply_example.cpp  vert.vert  vert_522.vert
common/: app.h  basic_shader_program.h  path.h  ply_reader.h  program.h  shader.h  utility.h
data/: bunny.ply  premitives.h
doc/: pass_data_from_cpu_to_gpu.md
